# deng-toolkit

./: .mcp.json  README.md  setup.sh  uninstall.sh
.claude-plugin/: plugin.json
commands/: deng-analyze-procedures.md  deng-build-ontology.md  deng-catalog-refresh.md  deng-catalog-status.md  deng-catalog-sync.md  deng-find-data.md
docs/brainstorms/: 2026-01-27-centralized-catalog-sync-brainstorm.md
docs/plans/: 2026-01-27-feat-centralized-catalog-sync-plan.md  2026-01-27-feat-tdd-mcp-server-implementation-plan.md  2026-01-28-refactor-catalog-toolkit-separation-plan.md
hooks/: hooks.json
hooks/scripts/: catalog-updated.sh  ontology-updated.sh
scripts/: analyze_procedures.py  apply_review_feedback.py  build_ontology.py  catalog_query.py  catalog_refresh.py  catalog_snapshot.py  catalog_sync.sh  config.py  generate_review_excel.py  migrate_catalog.sh  test_catalog_sync.sh  test_config.py
scripts/adapters/: __init__.py  procedure_parser.py  sqlserver.py
servers/: __init__.py
servers/catalog_mcp/: __init__.py  annotations.py  conftest.py  pyproject.toml  server.py  test_annotations.py  test_catalog_tools.py
skills/deng-analyze-procedures/: SKILL.md
skills/deng-build-ontology/: SKILL.md
skills/deng-new/: SKILL.md  (+1 more)
templates/: ontology_config.toml.example  targets.toml.example
todos/: 001-pending-p1-missing-mcp-json.md  002-pending-p2-hook-pattern-too-broad.md  003-pending-p2-duplicate-skills-commands.md  004-pending-p2-command-files-over-documented.md  005-pending-p3-add-input-sanitization-warning.md  006-pending-p3-unnecessary-plugin-json-metadata.md
(+4 files in other folders)
